# readlif

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml  test.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  readlif.reader.rst  readlif.rst  readlif.utilities.rst
envs/: dev.yml
readlif/: reader.py  utilities.py
tests/: LeicaLASX_xz-plane_example.lif  conftest.py  test.py  test_reader.py  test_readlif.py  test_utilities.py  testdata_2channel_xz.lif
tests/artifacts/: README.MD
tests/artifacts/misc/: LeicaLASX_wavelength-sweep_example.lif  valid-tiff.tif  xem_y32.tif
tests/artifacts/openmicroscopy-lif-files/: README.md
tests/artifacts/openmicroscopy-lif-files/imagesc-30856/: readme.txt
tests/artifacts/openmicroscopy-lif-files/michael/: PR2729_frameOrderCombinedScanTypes.lif  readme.txt
tests/artifacts/openmicroscopy-lif-files/seanwarren/150519_FRAP_test_ROIs_chromagreen/: readme.txt
tests/artifacts/tiff-files/: c0z0t0.tif  c0z2t0.tif  c0z2t2.tif  c1z0t0.tif  xz_c0_t0.tif
tests/artifacts/xz-example/expected-outputs/: c1t8.tif
